<resources>
    <string name="app_name">My Application</string>
    <string name="home">HOME</string>
    <string name="continue_to_game">CONTINUE TO GAME</string>
    <string name="player_name">Enter Player Name</string>
    <string name="choose_a_character">Choose A Character</string>
    <string name="start">START</string>
    <string name="restart">RESTART</string>
    <string name="go_back">GO BACK</string>
    <string name="ready">Are you ready?</string>
    <string name="anon">Anon</string>
    <string name="blackjack">BLACKJACK!</string>
    <string name="blackjack_launch">Black Jack Start Screen</string>
    <string name="hit">HIT!</string>
    <string name="stand">STAND!</string>
    <string name="dealer_score">Dealer Score:</string>
    <string name="player_score">Player Score:</string>
    <string name="tic_tac_toe">TIC-TAC-TOE!</string>
    <string name="tictactoe_launch">Tic Tac Toe Start Screen</string>
    <string name="select">CLick to select</string>
    <string name="wordle">WORDLE!</string>
    <string name="wordle_launch">Wordle Start Screen</string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="game">GAME</string>
    <string name="over">OVER</string>
    <string name="your_score">YOUR SCORE: </string>
    <string name="high_score">HIGH SCORE: </string>
    <string name="leaderboard">LEADER: </string>
</resources>