<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:background="@color/red"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/go_game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game"
            android:fontFamily="@font/pressstart_2p"
            app:cornerRadius="0dp"
            android:textSize="50dp"
            android:textColor="@color/yellow"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="312dp"
            android:layout_marginTop="-20dp"
            android:layout_height="281dp"
            app:srcCompat="@drawable/skull" />

        <TextView
            android:id="@+id/go_over_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pressstart_2p"
            app:cornerRadius="0dp"
            android:textSize="50dp"
            android:textColor="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/over" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/go_home_button"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/pressstart_2p"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:backgroundTint="@color/black"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/go_restart_button"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/pressstart_2p"
                android:text="@string/restart"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:backgroundTint="@color/black"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"  />

        </LinearLayout>

        <TextView
            android:id="@+id/go_game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/pressstart_2p"
            android:text="@string/your_score"
            android:textColor="@color/yellow"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/go_game_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pressstart_2p"
            android:text="@string/high_score"
            android:textColor="@color/yellow"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/go_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pressstart_2p"
            android:text="@string/leaderboard"
            android:textColor="@color/yellow"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>